--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
@@ -9,7 +9,6 @@
 			rel="stylesheet"
 			type="text/css"
 		/>
-		<link rel="stylesheet" href="../src/global.css" />
 		<script defer src="../node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
 		<script defer src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"></script>
 		<script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
